--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -15,8 +15,8 @@ jobs:
     - uses: actions/checkout@v1
     - name: setup environment
       run: |
-        apt-get update
-        apt-get install -y curl python3 latexmk lmodern texlive texlive-latex-extra texlive-lang-japanese
+        sudo apt-get update
+        sudo apt-get install -y curl python3 latexmk lmodern texlive texlive-latex-extra texlive-lang-japanese
     - name: build pdf
       run: |
         mkdir -p /app
