--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -23,4 +23,4 @@ jobs:
         dvipdfmx main.dvi
     - name: upload pdf
       run: |
-        bash entrypoint.sh
+        bash .github/workflows/entrypoint.sh
